// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemStatusCard should not render hasLastCheckIn 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="SystemPropertiesCardTitle"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              aria-label="Current state title"
              class=""
              data-ouia-component-id="Current state title"
            >
              Current state
            </dt>
            <dd
              aria-label="Current state value"
              class=""
              data-ouia-component-id="Current state value"
            >
              Active
            </dd>
            <dt
              aria-label="Registered title"
              class=""
              data-ouia-component-id="Registered title"
            >
              Registered
            </dt>
            <dd
              aria-label="Registered value"
              class=""
              data-ouia-component-id="Registered value"
            >
              01 Apr 2014 00:00 UTC
            </dd>
            <dt
              aria-label="RHC title"
              class=""
              data-ouia-component-id="RHC title"
            >
              RHC
            </dt>
            <dd
              aria-label="RHC value"
              class=""
              data-ouia-component-id="RHC value"
            >
              Connected
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should not render hasRHC 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="SystemPropertiesCardTitle"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              aria-label="Current state title"
              class=""
              data-ouia-component-id="Current state title"
            >
              Current state
            </dt>
            <dd
              aria-label="Current state value"
              class=""
              data-ouia-component-id="Current state value"
            >
              Active
            </dd>
            <dt
              aria-label="Registered title"
              class=""
              data-ouia-component-id="Registered title"
            >
              Registered
            </dt>
            <dd
              aria-label="Registered value"
              class=""
              data-ouia-component-id="Registered value"
            >
              01 Apr 2014 00:00 UTC
            </dd>
            <dt
              aria-label="Last upload title"
              class=""
              data-ouia-component-id="Last upload title"
            >
              Last upload
            </dt>
            <dd
              aria-label="Last upload value"
              class=""
              data-ouia-component-id="Last upload value"
            >
              01 Jun 2014 00:00 UTC
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should not render hasRegistered 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="SystemPropertiesCardTitle"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              aria-label="Current state title"
              class=""
              data-ouia-component-id="Current state title"
            >
              Current state
            </dt>
            <dd
              aria-label="Current state value"
              class=""
              data-ouia-component-id="Current state value"
            >
              Active
            </dd>
            <dt
              aria-label="Last upload title"
              class=""
              data-ouia-component-id="Last upload title"
            >
              Last upload
            </dt>
            <dd
              aria-label="Last upload value"
              class=""
              data-ouia-component-id="Last upload value"
            >
              01 Jun 2014 00:00 UTC
            </dd>
            <dt
              aria-label="RHC title"
              class=""
              data-ouia-component-id="RHC title"
            >
              RHC
            </dt>
            <dd
              aria-label="RHC value"
              class=""
              data-ouia-component-id="RHC value"
            >
              Connected
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should not render hasState 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="SystemPropertiesCardTitle"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              aria-label="Registered title"
              class=""
              data-ouia-component-id="Registered title"
            >
              Registered
            </dt>
            <dd
              aria-label="Registered value"
              class=""
              data-ouia-component-id="Registered value"
            >
              01 Apr 2014 00:00 UTC
            </dd>
            <dt
              aria-label="Last upload title"
              class=""
              data-ouia-component-id="Last upload title"
            >
              Last upload
            </dt>
            <dd
              aria-label="Last upload value"
              class=""
              data-ouia-component-id="Last upload value"
            >
              01 Jun 2014 00:00 UTC
            </dd>
            <dt
              aria-label="RHC title"
              class=""
              data-ouia-component-id="RHC title"
            >
              RHC
            </dt>
            <dd
              aria-label="RHC value"
              class=""
              data-ouia-component-id="RHC value"
            >
              Connected
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should render correctly - no data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="SystemPropertiesCardTitle"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              aria-label="Current state title"
              class=""
              data-ouia-component-id="Current state title"
            >
              Current state
            </dt>
            <dd
              aria-label="Current state value"
              class=""
              data-ouia-component-id="Current state value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              aria-label="Registered title"
              class=""
              data-ouia-component-id="Registered title"
            >
              Registered
            </dt>
            <dd
              aria-label="Registered value"
              class=""
              data-ouia-component-id="Registered value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              aria-label="Last upload title"
              class=""
              data-ouia-component-id="Last upload title"
            >
              Last upload
            </dt>
            <dd
              aria-label="Last upload value"
              class=""
              data-ouia-component-id="Last upload value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              aria-label="RHC title"
              class=""
              data-ouia-component-id="RHC title"
            >
              RHC
            </dt>
            <dd
              aria-label="RHC value"
              class=""
              data-ouia-component-id="RHC value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should render correctly with data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="SystemPropertiesCardTitle"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              aria-label="Current state title"
              class=""
              data-ouia-component-id="Current state title"
            >
              Current state
            </dt>
            <dd
              aria-label="Current state value"
              class=""
              data-ouia-component-id="Current state value"
            >
              Active
            </dd>
            <dt
              aria-label="Registered title"
              class=""
              data-ouia-component-id="Registered title"
            >
              Registered
            </dt>
            <dd
              aria-label="Registered value"
              class=""
              data-ouia-component-id="Registered value"
            >
              01 Apr 2014 00:00 UTC
            </dd>
            <dt
              aria-label="Last upload title"
              class=""
              data-ouia-component-id="Last upload title"
            >
              Last upload
            </dt>
            <dd
              aria-label="Last upload value"
              class=""
              data-ouia-component-id="Last upload value"
            >
              01 Jun 2014 00:00 UTC
            </dd>
            <dt
              aria-label="RHC title"
              class=""
              data-ouia-component-id="RHC title"
            >
              RHC
            </dt>
            <dd
              aria-label="RHC value"
              class=""
              data-ouia-component-id="RHC value"
            >
              Connected
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;
